refactor handler structure, hide unhandled errors on production, add username & password check
